--- a/src/QuickTests/.cproject
+++ b/src/QuickTests/.cproject
@@ -110,7 +110,7 @@
 								<option id="de.innot.avreclipse.compiler.option.optimize.shortenums.227269035" name="Short enums (-fshort-enums)" superClass="de.innot.avreclipse.compiler.option.optimize.shortenums" useByScannerDiscovery="false" value="false" valueType="boolean"/>
 								<option id="de.innot.avreclipse.compiler.option.language.uchar.1066535315" name="char is unsigned (-funsigned-char)" superClass="de.innot.avreclipse.compiler.option.language.uchar" useByScannerDiscovery="false" value="false" valueType="boolean"/>
 								<option id="de.innot.avreclipse.compiler.option.language.ubitfields.1957618802" name="bitfields are unsigned (-funsigned-bitfields)" superClass="de.innot.avreclipse.compiler.option.language.ubitfields" useByScannerDiscovery="false" value="false" valueType="boolean"/>
-								<option id="de.innot.avreclipse.compiler.option.incpath.1591411594" superClass="de.innot.avreclipse.compiler.option.incpath" useByScannerDiscovery="false" valueType="includePath">
+								<option id="de.innot.avreclipse.compiler.option.incpath.1591411594" name="Include Paths (-I)" superClass="de.innot.avreclipse.compiler.option.incpath" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ATmighty}&quot;"/>
 								</option>
 								<inputType id="de.innot.avreclipse.compiler.winavr.input.1312873762" name="C Source Files" superClass="de.innot.avreclipse.compiler.winavr.input"/>
@@ -123,17 +123,17 @@
 								<option id="de.innot.avreclipse.cppcompiler.option.optimize.packstruct.808618196" name="Pack structs (-fpack-struct)" superClass="de.innot.avreclipse.cppcompiler.option.optimize.packstruct" useByScannerDiscovery="false" value="false" valueType="boolean"/>
 								<option id="de.innot.avreclipse.cppcompiler.option.optimize.shortenums.1661561561" name="Short enums (-fshort-enums)" superClass="de.innot.avreclipse.cppcompiler.option.optimize.shortenums" useByScannerDiscovery="false" value="false" valueType="boolean"/>
 								<option id="de.innot.avreclipse.cppcompiler.option.otherflags.1040939364" name="Other flags" superClass="de.innot.avreclipse.cppcompiler.option.otherflags" useByScannerDiscovery="false" value="-std=c++11" valueType="string"/>
-								<option id="de.innot.avreclipse.cppcompiler.option.incpath.803740035" superClass="de.innot.avreclipse.cppcompiler.option.incpath" useByScannerDiscovery="false" valueType="includePath">
+								<option id="de.innot.avreclipse.cppcompiler.option.incpath.803740035" name="Include Paths (-I)" superClass="de.innot.avreclipse.cppcompiler.option.incpath" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ATmighty}&quot;"/>
 								</option>
 								<inputType id="de.innot.avreclipse.cppcompiler.input.1875059345" superClass="de.innot.avreclipse.cppcompiler.input"/>
 							</tool>
 							<tool id="de.innot.avreclipse.tool.linker.winavr.app.release.1796285121" name="AVR C Linker" superClass="de.innot.avreclipse.tool.linker.winavr.app.release"/>
 							<tool id="de.innot.avreclipse.tool.cpplinker.app.release.418576534" name="AVR C++ Linker" superClass="de.innot.avreclipse.tool.cpplinker.app.release">
-								<option id="de.innot.avreclipse.cpplinker.option.libpath.208510835" superClass="de.innot.avreclipse.cpplinker.option.libpath" useByScannerDiscovery="false" valueType="stringList">
+								<option id="de.innot.avreclipse.cpplinker.option.libpath.208510835" name="Libraries Path (-L)" superClass="de.innot.avreclipse.cpplinker.option.libpath" useByScannerDiscovery="false" valueType="stringList">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ATmighty/Release}&quot;"/>
 								</option>
-								<option id="de.innot.avreclipse.cpplinker.option.libs.748310510" superClass="de.innot.avreclipse.cpplinker.option.libs" useByScannerDiscovery="false" valueType="libs">
+								<option id="de.innot.avreclipse.cpplinker.option.libs.748310510" name="Libraries (-l)" superClass="de.innot.avreclipse.cpplinker.option.libs" useByScannerDiscovery="false" valueType="libs">
 									<listOptionValue builtIn="false" value="ATmighty"/>
 								</option>
 								<inputType id="de.innot.avreclipse.tool.cpplinker.input.1090409066" name="OBJ Files" superClass="de.innot.avreclipse.tool.cpplinker.input">
